fixed spacing

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -6,4 +6,10 @@ h1 {
 
 h2 {
   font-style: italic;
+  font-size: 20px;
+}
+
+p {
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
